<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JUtility.Library</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello JUtility!</string>

    <string name="hit">hit</string>
    <string name="ok">确定</string>
    <string name="finish">完成</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="img_des">des</string>

    <!-- Start ImageView Description -->
    <string name="des">contentDescription</string>
    <!-- end ImageView Description -->

    <!-- start common -->
    <!-- start Network -->
    <string name="network_is_not_available">网络不可用</string>
    <!-- end Network -->

    <string name="sdcard_not_available">SD卡不可用</string>
    <string name="sdcard_space_not_enough">SD空间不足</string>
    <!-- * -->
    <string name="update_download_file_error">下载文件出错</string>
    <string name="update_have_a_new_version">有新版本</string>
    <string name="update_update_now">现在更新</string>
    <string name="update_update">更新</string>
    <string name="update_not_update">不更新</string>
    <string name="update_is_the_latest_version">已是最新版本</string>
    <string name="update_downloading">正在下载&#8230;</string>
    <string name="update_checking">正在检查&#8230;</string>
    <string name="upadte_download_file_error">下载出错</string>
    <!-- * -->
    <!-- end common -->

    <!-- utils start -->
    <string name="dateutility_unknow">未知</string>
    <string name="dateutility_a_moment_ago">刚刚</string>
    <string name="dateutility_a_min_ago">分钟前</string>
    <string name="dateutility_a_hour_ago">小时前</string>
    <string name="dateutility_today">今天</string>
    <string name="dateutility_yesterday">昨天</string>
    <!-- utils end -->

    <!-- component start -->
    <string name="loading">正在加载...</string>
    <!-- component end -->

    <!-- Photo start -->
    <string name="image_folder_name">文件名</string>
    <string name="image_image_num">图片数量</string>
    <string name="image_all_folder">所有图片</string>
    <string name="image_preview">预览</string>
    <string name="image_sheet">张</string>
    <string name="image_shoot">拍摄照片</string>
    <string name="image_picture">图片</string>
    <string name="image_no_picture">暂无图片</string>
    <string name="image_temp_date">2015年12月2日</string>
    <string name="image_msg_no_camera">没有系统相机</string>
    <string name="image_msg_amount_limit">已经达到最高选择数量</string>
    <string name="image_open_camera_fail">相册初始化失败!</string>

    <!--<string name="photo_invalidSD">sdcard无效或没有插入</string>-->
    <!--<string name="photo_select_photo">选择相册</string>-->
    <!--<string name="photo_album">相册</string>-->
    <!--<string name="photo_preview">预览</string>-->
    <!--<string name="photo_camera_cancel">取消</string>-->
    <!--<string name="photo_finish">完成</string>-->
    <!--<string name="photo_no_photo">相册没有图片</string>-->
    <!--<string name="photo_back">返回</string>-->
    <!--<string name="photo_only_choose_num">你最多选择%1$d张照片</string>-->
    <!--<string name="photo_ok_btn_text">完成(%1$d/%2$d)</string>-->
    <!--<string name="photo_img_des">Image description</string>-->
    <string name="photo_not_select_pic">未选择图片</string>
    <string name="photo_position_can_not_less_than_zero">位置不能小于0</string>
    <!-- Photo end -->

    <!-- Photo Crop 剪切图片，start -->
    <string name="crop_crop_image">剪切图片</string>
    <!-- Photo Crop 剪切图片，start -->

</resources>