<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/black">

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CC000000"
        android:hint="@string/image_temp_date"
        android:paddingBottom="5dp"
        android:paddingLeft="10sp"
        android:paddingTop="5dp"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="14sp"/>

    <RelativeLayout
        android:id="@+id/rlyBottomView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/translucentCD"
        android:clickable="true">

        <Button
            android:id="@+id/btnCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@null"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/imageselector_select_album"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:singleLine="true"
            android:text="@string/image_all_folder"
            android:textColor="@color/white"
            android:textSize="14sp"/>

    </RelativeLayout>

    <GridView
        android:id="@+id/gvImages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rlyBottomView"
        android:clipToPadding="false"
        android:horizontalSpacing="2dp"
        android:listSelector="@android:color/transparent"
        android:numColumns="3"
        android:verticalSpacing="2dp"/>

    <TextView
        android:id="@+id/tvNoPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/image_no_picture"
        android:textColor="@color/white"
        android:visibility="gone"/>

</RelativeLayout>
