<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/jitem_base_selector"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/ivCover"
            android:layout_width="68dp"
            android:layout_height="60dp"
            android:contentDescription="@string/img_des"
            android:scaleType="centerCrop"
            android:src="@drawable/imageselector_photo"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1.0"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvFolderName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/image_folder_name"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tvCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/image_image_num"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/imageselector_selected"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/translucent77"/>

</LinearLayout>